primer version funcional

--- a/css/secciones/encabezado.css
+++ b/css/secciones/encabezado.css
@@ -10,6 +10,10 @@
     }
 /*Encabezado*/
 
+
+
+/*Responsivo-------*/
+
 .encabezado__container{
     /*Distribución*/
     display: flex;
@@ -30,7 +34,7 @@
     justify-content: space-evenly;
     align-items: center;
     /*Propiedades*/
-    width: 30.3rem;
+    width: 34.3rem;
 }
 
 .encabezado__logo{
@@ -58,6 +62,9 @@
     font-size: .625rem;
     color: #000;
 }
+.encabezado__lupa{
+    width:1rem;
+}
 
 .encabezado__login{
     /*Dimensiones*/
@@ -74,9 +81,9 @@
 
 }
 
-/*Responsivo-------*/
-
-
+.encabezado__login:hover{
+    cursor:pointer
+}
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     body{
@@ -100,7 +107,7 @@
     }
 
     .encabezado__login{
-        width: 22%;
+        width: 10rem;
         margin-right: 2rem;
     }
 }
@@ -119,7 +126,7 @@
         margin: 0 0rem;
     }
     .encabezado__login{
-        width: 15rem;
+        width: 10rem;
         margin-right: 2rem;
     }
     
