--- a/css/secciones/contacto.css
+++ b/css/secciones/contacto.css
@@ -1,101 +1,106 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
 
+a {
+   text-decoration: none;
+   color: #2A7AE4;
+}
+
     
 
 .contacto__container{
-    width: 70.6rem;
-    background: #EAF2FD;
-    padding-bottom: 2%;
-        
+   width: 80.6rem;
+   background: #EAF2FD;
+   padding-bottom: 2%;
+       
 }
 
- .contacto__formulario{
-   display: flex;
-   padding: 5% 17% 3% 14%; 
-   justify-content: space-between;
-   width: 51.5rem;
+.contacto__formulario{
+  display: flex;
+  padding: 5% 17% 3% 14%; 
+  justify-content: space-between;
+  width: 51.5rem;
 }
 
 
 .contacto__logo{
-    width:8rem;
-    height: min-content;
+   width:8rem;
+   height: min-content;
 
- }
- 
+}
+
 .contacto__ligas{
-    
-    display: flex;
-    flex-direction: column;
-    gap: 1.7rem;
-    width: 9rem;
+   
+   display: flex;
+   flex-direction: column;
+   gap: 1.7rem;
+   width: 9rem;
 
-    
+   
 }
 
 .ligas-item{
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 500;
-    font-size: .80rem;
-        color: #464646;
+   font-family: 'Raleway';
+   font-style: normal;
+   font-weight: 500;
+   font-size: .80rem;
+       color: #464646;
 }
- 
- .contacto__campos{
-    display: flex;
-    flex-direction: column;
-    gap: .7rem;
-    width: 27rem;
+
+.contacto__campos{
+   display: flex;
+   flex-direction: column;
+   gap: .7rem;
+   width: 27rem;
 
 
- }
+}
 
- .contacto-titulo{
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 700;
-    font-size: .75rem;
-    color: #464646;
- }
+.contacto-titulo{
+   font-family: 'Raleway';
+   font-style: normal;
+   font-weight: 700;
+   font-size: .75rem;
+   color: #464646;
+}
 
- .contacto-nombre{
-    
-    border: none;
-    text-decoration: none;
-    font-family: 'Raleway';
+.contacto-nombre{
+   
+   border: none;
+   text-decoration: none;
+   font-family: 'Raleway';
 
-    font-weight: 400;
-    font-size: .65rem;
-    color: #A2A2A2;
-    padding-left: .6rem;
-    height: 3rem;
-    padding-bottom: 2rem;
-    width: 100%;
-    box-sizing: border-box;
-    box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.2);
+   font-weight: 400;
+   font-size: .65rem;
+   color: #A2A2A2;
+   padding-left: .6rem;
+   height: 3rem;
+   padding-bottom: 2rem;
+   width: 100%;
+   box-sizing: border-box;
+   box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.2);
 
-    
- }
-
- 
- .contacto-mensaje{
-    box-sizing: border-box;
-    font-family: 'Raleway';
-    
-    font-weight: 400;
-    font-size: .75rem;
-    color: #A2A2A2;
-    padding-left: 0.5rem;
-    padding-bottom: 3.5rem;
-    border: none;
-    text-decoration: none;
-    box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.2);
-    height: 5rem;
+   
+}
 
 
- }
- 
- .contacto-boton{
+.contacto-mensaje{
+   box-sizing: border-box;
+   font-family: 'Raleway';
+   
+   font-weight: 400;
+   font-size: .75rem;
+   color: #A2A2A2;
+   padding-left: 0.5rem;
+   padding-bottom: 3.5rem;
+   border: none;
+   text-decoration: none;
+   box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.2);
+   height: 5rem;
+
+
+}
+
+.contacto-boton{
 
 align-items: center;
 
@@ -112,10 +117,10 @@ font-style: normal;
 font-weight: 400;
 font-size: .8rem;
 color: #FFFFFF;
- }
+}
 
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
 
 
    .contacto__container{
