--- a/css/secciones/hero.css
+++ b/css/secciones/hero.css
@@ -11,7 +11,10 @@
      
      .hero__background{
          width: 80.6rem;
-         height: 10rem;
+         height: 12rem;
+         background-image: url(/assets/imagenes/hero.png);
+         background-repeat: no-repeat;
+         background-size: cover;
         
          
      }
